--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -30,7 +30,7 @@
   <body>
   <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Alex Zmachynski</a>
+                <a class="navbar-brand" href="#">✎ Alex Zmachynski</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -57,7 +57,7 @@
     <br />
     <h2>Latest Post</h2>
     <hr />
-    
+
     </div>
 </main>
 
