--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="generator" content="">
-    <title>Alex Blog</title>
+    <title>{{ blog.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -53,19 +53,12 @@
 
 <main role="main">
     <div class="container">
-      <h1 class="text-center pt-3">Welcome to Alex' Blog</h1>
+      <h1 class="text-center pt-3">{{ blog.title }}</h1>  
+      <p class="text-center">{{ blog.pub_date }}</p>
+      <img class="img-fluid" src="{{ blog.image.url }}" height=80 width=80/>
       <br />
       <br />
-      <h2>Latest Post</h2>
-      <hr />
-      {% for blog in blogs.all %}  
-      <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></h3></a>
-      {{ blog.pub_date_pretty }}
-      <br />
-      <img class="img-fluid" src="{{ blog.image.url }}" height=50 width=50/>
-      <br />
-      <p>{{ blog.summary }}</p>
-      {% endfor %}
+      <p>{{ blog.body }}</p>
     </div>
 </main>
 
