before git first time

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -41,7 +41,7 @@
                       <a class="nav-link" href="http://linkedin.com/in/alex-zmachynski-555a7374">LinkedIn</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% static 'A_Zmachynski_Resume.docx' %}">Resume</a>
+                      <a class="nav-link" href="{% static 'A_Zmachynski_Resume.pdf' %}">Resume</a>
                     </li>                   
                     <li class="nav-item">
                       <a class="nav-link" href=" {% url 'allblogs' %} ">Blog</a>
