--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="generator" content="">
-    <title>Alex Blog</title>
+    <title>Alex's Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="http://linkedin.com/in/alex-zmachynski-555a7374">LinkedIn</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% static 'A_Zmachynski_Resume.docx' %}">Resume</a>
+                <a class="nav-link" href="{% static 'A_Zmachynski_Resume.pdf' %}">Resume</a>
               </li>                   
               <li class="nav-item">
                 <a class="nav-link active" href=" {% url 'allblogs' %} ">Blog</a>
@@ -53,7 +53,7 @@
 
 <main role="main">
     <div class="container">
-      <h1 class="text-center pt-3">Welcome to Alex' Blog</h1>
+      <h1 class="text-center pt-3">Welcome to Alex's Blog</h1>
       <br />
       <br />
       <h2>Latest Post</h2>
