--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -30,7 +30,7 @@
   </head>
   <body>
   <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand" href="{% url 'home' %}">✎ Alex Zmachynski</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,21 @@
               </li>                   
             </ul>
           </div>
-  </nav>
+      </nav> -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{% url 'home' %}">✎ Alex Zmachynski</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-link" href="http://linkedin.com/in/alex-zmachynski-555a7374">LinkedIn</a>
+            <a class="nav-link" href="{% static 'A_Zmachynski_Resume.pdf' %}">Resume</a>
+            <a class="nav-link active" href=" {% url 'allblogs' %} ">Blog</a>
+          </div>
+        </div>
+      </nav>
+
   </header>
 
 <main role="main">
