--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -51,7 +51,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Hi, I'm Alex.</h1>
-      <p class="lead text-muted">Hey, my name is Alex. C is great language, C++ is great language, Python & Django are great.</p>
+      <p class="lead text-muted">Hi, I'm Alex. C, C++, C# programmer by day ☀︎, Python & Django programmer by night ☾.</p>
       <p>
         <a href="mailto:azmachynski@gmail.com" class="btn btn-primary my-2">Email me</a>
       </p>
