--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -84,7 +84,7 @@
         </div> -->
 
         <div class="col-lg-4 col-sm-6">
-          <div class="thumbnail mb-4">
+          <div class="thumbnail mb-4" style="width: 14rem;">
             <img class="card-img-top" src="{{ job.image.url }}"/>
             <div class="card-body">
               <p class="card-text">{{ job.summary }}</p>
